Fixed label name and font weight. Will address alignment issues in a future commit.

--- a/src/mmw/sass/components/_buttons.scss
+++ b/src/mmw/sass/components/_buttons.scss
@@ -64,9 +64,9 @@
   }
 
   //For precip control
-  &.label{
+  label{
     color: $black-74;
-    font-weight: normal;
+    font-weight: 400;
   }
 }
 
